@@ -1,1 +1,9 @@
 # JMP-4_1
+
+Design and implement code that will introduce:
+
+java.lang.OutOfMemoryError: Java heap space. Create big objects continuously and make them stay in memory.
+
+java.lang.OutOfMemoryError: PermGen space. Load classes continuously and make them stay in memory.
+
+Use options like -XX:MaxPermSize=1m -Xmx10m to reach exception quicker.
